force-app/main/default/objects/Account/fields/Account_Closed_Loan_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Loan_Revenue__c</fullName>
    <inlineHelpText>Excluding Third Party</inlineHelpText>
    <label>Account Closed Loan Revenue</label>
    <summarizedField>Opportunity.Closed_Loan_Revenue__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>