force-app/main/default/objects/Account/fields/Account_Closed_Loan_Volume__c.field-meta.xml
<CustomField>
    <fullName>Account_Closed_Loan_Volume__c</fullName>
    <label>Account Closed Loan Volume</label>
    <summarizedField>Opportunity.Closed_Loan_Volume__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Third Party, Third Party Direct, Third Party Government</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>