force-app/main/default/objects/Account/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <inlineHelpText>Please provide a brief overview for the Account (i.e. where does the Account stands?)</inlineHelpText>
    <label>Action Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>