force-app/main/default/objects/Account/fields/Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done an annual review with this business area</description>
    <label>Annual Review</label>
    <type>Checkbox</type>
</CustomField>