force-app/main/default/objects/Account/fields/BillingPostalCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip/Postal Code Lookup</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts_BillingPostalCode</relationshipName>
    <type>Lookup</type>
</CustomField>