force-app/main/default/objects/Account/fields/BillingStateLookup__c.field-meta.xml
<CustomField>
    <fullName>BillingStateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State/Province Lookup</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts_BillingState</relationshipName>
    <type>Lookup</type>
</CustomField>