force-app/main/default/objects/Account/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <label>Branch ID</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>