force-app/main/default/objects/Account/fields/Branch_License_s_Needed__c.field-meta.xml
<CustomField>
    <fullName>Branch_License_s_Needed__c</fullName>
    <label>Branch License(s) Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>