force-app/main/default/objects/Account/fields/Branch_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Branch_Requirements__c</fullName>
    <label>Branch Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>