force-app/main/default/objects/Account/fields/Business_Area_Leader__c.field-meta.xml
<CustomField>
    <fullName>Business_Area_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the head of this part of the business</description>
    <label>Business Area Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Business Area Leader)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>