force-app/main/default/objects/Account/fields/Business_Leaders_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Business_Leaders_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the assistant to the Business Area Leader</description>
    <label>Business Leaders Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Business Leaders Assistant)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>