force-app/main/default/objects/Account/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The head of the company</description>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>