force-app/main/default/objects/Account/fields/Closed_Loan_Total__c.field-meta.xml
<CustomField>
    <fullName>Closed_Loan_Total__c</fullName>
    <label>Closed Loan Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>