force-app/main/default/objects/Account/fields/Closed_Loan_Volume__c.field-meta.xml
<CustomField>
    <fullName>Closed_Loan_Volume__c</fullName>
    <label>Closed Loan Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>