force-app/main/default/objects/Account/fields/Current_Fortune_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Current_Fortune_Ranking__c</fullName>
    <label>Current Fortune Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>