force-app/main/default/objects/Account/fields/Duplicate_Master__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Verification_Status__c</field>
            <operation>equals</operation>
            <value>Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>