force-app/main/default/objects/Account/fields/Employees_Range__c.field-meta.xml
<CustomField>
    <fullName>Employees_Range__c</fullName>
    <label>Employees Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Small (1-100)</fullName>
            </value>
            <value>
                <fullName>Small (101-1,000)</fullName>
            </value>
            <value>
                <fullName>Medium (1,001-10,000)</fullName>
            </value>
            <value>
                <fullName>Large (10,001-50,000)</fullName>
            </value>
            <value>
                <fullName>Very Large (50,001+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>