force-app/main/default/objects/Account/fields/Employment_History_Address__c.field-meta.xml
<CustomField>
    <fullName>Employment_History_Address__c</fullName>
    <label>Employment History Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>