force-app/main/default/objects/Account/fields/FOC_Building__c.field-meta.xml
<CustomField>
    <fullName>FOC_Building__c</fullName>
    <label>FOC Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>