force-app/main/default/objects/Account/fields/Huddle__c.field-meta.xml
<CustomField>
    <fullName>Huddle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done a huddle with this business area</description>
    <label>Huddle</label>
    <type>Checkbox</type>
</CustomField>