force-app/main/default/objects/Account/fields/Is_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Is_Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Third Party</label>
    <type>Checkbox</type>
</CustomField>