force-app/main/default/objects/Account/fields/Lunch_and_Learn__c.field-meta.xml
<CustomField>
    <fullName>Lunch_and_Learn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done a Lunch and Learn with this business area</description>
    <label>Lunch and Learn</label>
    <type>Checkbox</type>
</CustomField>