force-app/main/default/objects/Account/fields/Mortgage_Insiders_Status__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insiders_Status__c</fullName>
    <formula>IF(Pursuing_MI_Active_Count__c &gt; 0, &apos;Active&apos;, IF(Pursuing_MI_Prospect_Count__c &gt; 0, &apos;Prospect&apos;, &apos;&apos;))</formula>
    <label>Mortgage Insiders Status</label>
    <type>Text</type>
</CustomField>