force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Misc notes</description>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>