force-app/main/default/objects/Account/fields/Notes_last_updated__c.field-meta.xml
<CustomField>
    <fullName>Notes_last_updated__c</fullName>
    <description>When were these notes issued</description>
    <label>Notes last updated</label>
    <type>Date</type>
</CustomField>