force-app/main/default/objects/Account/fields/Partner_Gift_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Partner_Gift_Restrictions__c</fullName>
    <label>Partner Gift Restrictions</label>
    <type>TextArea</type>
</CustomField>