force-app/main/default/objects/Account/fields/Pursuing_MI_Prospect_Count__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_MI_Prospect_Count__c</fullName>
    <description>This field is used to set a formula field</description>
    <label>Pursuing MI Prospect Count</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>MI</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Contracts, Prospect</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>