force-app/main/default/objects/Account/fields/Pursuing_Mortgage_Insiders__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_Mortgage_Insiders__c</fullName>
    <formula>IF(Pursuing_MI_Prospect_Count__c &gt; 0 || Pursuing_MI_Active_Count__c &gt; 0, true, false)</formula>
    <label>Pursuing Mortgage Insiders</label>
    <type>Checkbox</type>
</CustomField>