force-app/main/default/objects/Account/fields/Pursuing_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_Relocation__c</fullName>
    <formula>IF(Pursuing_Relocation_Prospect_Count__c &gt; 0 || Pursuing_Relocation_Active_Count__c &gt; 0, true, false)</formula>
    <label>Pursuing Relocation</label>
    <type>Checkbox</type>
</CustomField>