force-app/main/default/objects/Account/fields/Pursuing_Relocation_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_Relocation_Active_Count__c</fullName>
    <description>this field is used in formula to set a checkbox.</description>
    <label>Pursuing Relocation Active Count</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Relo</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>