force-app/main/default/objects/Account/fields/Pursuing_SP_Prospect_Count__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_SP_Prospect_Count__c</fullName>
    <description>This field is used to set the formula field</description>
    <label>Pursuing SP Prospect Count</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Strategic Partnership</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Contracts, Prospect</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>