force-app/main/default/objects/Account/fields/Pursuing_Strategic_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_Strategic_Partnership__c</fullName>
    <formula>IF(Pursuing_SP_Prospect_Count__c &gt; 0 ||  Pursuing_SP_Active_Count__c &gt; 0, true, false)</formula>
    <label>Pursuing Strategic Partnership</label>
    <type>Checkbox</type>
</CustomField>