force-app/main/default/objects/Account/fields/QL_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>QL_Affiliations__c</fullName>
    <label>QL Affiliations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>College Sports</fullName>
            </value>
            <value>
                <fullName>Detroit Lions</fullName>
            </value>
            <value>
                <fullName>Family of Company</fullName>
            </value>
            <value>
                <fullName>Indy Car</fullName>
            </value>
            <value>
                <fullName>Intuit</fullName>
            </value>
            <value>
                <fullName>Lady A</fullName>
            </value>
            <value>
                <fullName>NASCAR</fullName>
            </value>
            <value>
                <fullName>Penske</fullName>
            </value>
            <value>
                <fullName>PGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>