force-app/main/default/objects/Account/fields/Referral_Goal__c.field-meta.xml
<CustomField>
    <fullName>Referral_Goal__c</fullName>
    <formula>(Count_of_Team_Members__c * 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>