force-app/main/default/objects/Account/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <label>Region Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>