force-app/main/default/objects/Account/fields/Relocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Status__c</fullName>
    <formula>IF(Pursuing_Relocation_Active_Count__c &gt; 0, &apos;Active&apos;, IF(Pursuing_Relocation_Prospect_Count__c &gt; 0, &apos;Prospect&apos;, &apos;&apos;))</formula>
    <label>Relocation Status</label>
    <type>Text</type>
</CustomField>