force-app/main/default/objects/Account/fields/Scheduling_Contact__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Scheduling Contact)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>