force-app/main/default/objects/Account/fields/State_Branch_Requirement__c.field-meta.xml
<CustomField>
    <fullName>State_Branch_Requirement__c</fullName>
    <inlineHelpText>States with &quot;No branches&quot; are tied to Detroit</inlineHelpText>
    <label>State Branch Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Branches</fullName>
            </value>
            <value>
                <fullName>Every Agent Needs Branch</fullName>
            </value>
            <value>
                <fullName>Centralized Branch</fullName>
            </value>
            <value>
                <fullName>Regus Office/Remote Banker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>