force-app/main/default/objects/Account/fields/State_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Type__c</fullName>
    <label>State Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLO</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>