force-app/main/default/objects/Account/fields/Strategic_Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partnership_Status__c</fullName>
    <formula>IF(Pursuing_SP_Active_Count__c &gt; 0, &apos;Active&apos;, IF(Pursuing_SP_Prospect_Count__c &gt; 0, &apos;Prospect&apos;, &apos;&apos;))</formula>
    <label>Strategic Partnership Status</label>
    <type>Text</type>
</CustomField>