force-app/main/default/objects/Account/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Team Leader)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>