force-app/main/default/objects/Account/fields/Team_Member_Referral_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Referral_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are team members at this company eligible for referral benefits</description>
    <label>Team Member Referral Eligible</label>
    <type>Checkbox</type>
</CustomField>