force-app/main/default/objects/Account/fields/Total_Closed_Loans__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Loans__c</fullName>
    <label>Total Closed Loans</label>
    <summarizedField>Opportunity.Closed_Loan_Total__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>