force-app/main/default/objects/Account/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>IF(TEXT(Verification_Status__c)=&apos;Master&apos;, IMAGE(&apos;/resource/1484176237000/verified&apos;, &apos;Verified&apos;), &apos;&apos;)</formula>
    <label>Verified</label>
    <type>Text</type>
</CustomField>