force-app/main/default/objects/Account/fields/Wave__c.field-meta.xml
<CustomField>
    <fullName>Wave__c</fullName>
    <label>Wave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cape Cod</fullName>
            </value>
            <value>
                <fullName>Colonial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>