force-app/main/default/objects/Account/fields/Where_are_they_tied__c.field-meta.xml
<CustomField>
    <fullName>Where_are_they_tied__c</fullName>
    <label>Where are they tied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>