force-app/main/default/objects/Account/recordTypes/Construction.recordType-meta.xml
<RecordType>
    <fullName>Construction</fullName>
    <active>true</active>
    <label>Construction</label>
</RecordType>