force-app/main/default/objects/Account/recordTypes/MassMutual.recordType-meta.xml
<RecordType>
    <fullName>MassMutual</fullName>
    <active>true</active>
    <label>MassMutual</label>
</RecordType>