force-app/main/default/objects/Account/recordTypes/Rocket_Professional_Insight.recordType-meta.xml
<RecordType>
    <fullName>Rocket_Professional_Insight</fullName>
    <active>true</active>
    <description>Record Type for Leads converted from Rocket Professional - Insight Process</description>
    <label>Rocket Professional - Insight</label>
</RecordType>