force-app/main/default/objects/Account/recordTypes/Schwab.recordType-meta.xml
<RecordType>
    <fullName>Schwab</fullName>
    <active>true</active>
    <label>Schwab</label>
</RecordType>