force-app/main/default/objects/Account/recordTypes/State_Farm_Broker_State.recordType-meta.xml
<RecordType>
    <fullName>State_Farm_Broker_State</fullName>
    <active>true</active>
    <label>State Farm - Broker State</label>
</RecordType>