force-app/main/default/objects/Account/recordTypes/State_Farm_MLOState.recordType-meta.xml
<RecordType>
    <fullName>State_Farm_MLOState</fullName>
    <active>true</active>
    <label>State Farm - MLO State</label>
</RecordType>