force-app/main/default/objects/Account/recordTypes/Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Team_Member</fullName>
    <active>true</active>
    <label>Team Member</label>
</RecordType>