force-app/main/default/objects/Account/validationRules/Cannot_change_account_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_account_name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED (Name), 
OR(
$Profile.Id=&apos;2F00e3A000001yauZ&apos;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change the Account name. Please contact your Administrator.</errorMessage>
</ValidationRule>