force-app/main/default/objects/Account/validationRules/Mass_Mutual_Partner_Type_Financial_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Mass_Mutual_Partner_Type_Financial_Group</fullName>
    <active>true</active>
    <description>Depending on the partner type chosen, we want to make certain fields required to fill out.</description>
    <errorConditionFormula>AND(ISPICKVAL(Partner_Type__c, &quot;Financial Group&quot;), ISBLANK(Branch_ID__c))</errorConditionFormula>
    <errorDisplayField>Branch_ID__c</errorDisplayField>
    <errorMessage>Please fill out the Branch ID.</errorMessage>
</ValidationRule>