force-app/main/default/objects/Account/listViews/Accounts_Owned_By_Nina.listView-meta.xml
<ListView>
    <fullName>Accounts_Owned_By_Nina</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Nina</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>notEqual</operation>
        <value>Real Estate</value>
    </filters>
    <label>Accounts Owned By Nina</label>
</ListView>