force-app/main/default/objects/Account/listViews/Accounts_Pursuing_Relocation.listView-meta.xml
<ListView>
    <fullName>Accounts_Pursuing_Relocation</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Relocation_Status__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pursuing_Relocation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts Pursuing Relocation</label>
</ListView>