force-app/main/default/objects/Account/listViews/Accounts_Pursuing_Strategic_Partnership.listView-meta.xml
<ListView>
    <fullName>Accounts_Pursuing_Strategic_Partnership</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Strategic_Partnership_Status__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pursuing_Strategic_Partnership__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts Pursuing Strategic Partnership</label>
</ListView>