force-app/main/default/objects/Account/listViews/Accounts_with_Mortgage_Insiders.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Mortgage_Insiders</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pursuing_Mortgage_Insiders__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts Pursuing Mortgage Insiders</label>
</ListView>