force-app/main/default/objects/Account/listViews/ALL_OPPTYS.listView-meta.xml
<ListView>
    <fullName>ALL_OPPTYS</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>ALL ACCOUNTS</label>
</ListView>