force-app/main/default/objects/Account/listViews/State_Farm_All_Broker_States.listView-meta.xml
<ListView>
    <fullName>State_Farm_All_Broker_States</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>State_Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.State_Farm_Broker_State</value>
    </filters>
    <label>State Farm - All Broker States</label>
</ListView>