force-app/main/default/objects/Account/listViews/State_Farm_All_MLO_States.listView-meta.xml
<ListView>
    <fullName>State_Farm_All_MLO_States</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>State_Branch_Requirement__c</columns>
    <columns>State_Type__c</columns>
    <columns>Wave__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.State_Farm_MLOState</value>
    </filters>
    <label>State Farm - All MLO States</label>
</ListView>