force-app/main/default/objects/Account/listViews/State_Farm_States.listView-meta.xml
<ListView>
    <fullName>State_Farm_States</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>State_Type__c</columns>
    <columns>Wave__c</columns>
    <columns>State_Branch_Requirement__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>State_Type__c</field>
        <operation>equals</operation>
        <value>MLO,Broker</value>
    </filters>
    <label>State Farm States</label>
</ListView>