force-app/main/default/objects/Account/listViews/Team_Member_Accounts1.listView-meta.xml
<ListView>
    <fullName>Team_Member_Accounts1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Team_Leader__c</columns>
    <columns>Scheduling_Contact__c</columns>
    <columns>FOC_Building__c</columns>
    <columns>Team_Email__c</columns>
    <columns>Count_of_Team_Members__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Referral_Eligible__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Team_Member</value>
    </filters>
    <label>Team Member Accounts</label>
</ListView>